...
      actionsPadding: EdgeInsets.only(right: 0, bottom: 15, top: 15),
      content: Container(
        width: screenSize.width,
        child: Form(
          key: _formKey,
          child: TextFormField(
            key: Key("note"),
            autofocus: true,
            validator: Validator.validateNote,
            controller: _textEditingController,
            decoration: InputDecoration(hintText: "Note..."),
          ),
        ),
...
                  },
                  child: Text("Cancel")),
            ),
            Container(
              width: screenSize.width * 0.3,
              child: ElevatedButton(
                  key: Key("done"),
                  onPressed: () {
                    if (!_formKey.currentState!.validate()) return;
                    Navigator.pop(context, _textEditingController.text);
                  },
                  child: Text("Done")),
            ),
...
