...
          StoreConnector<AppState, Function(int id, String note)>(
            converter: (store) => (id, note) => store.dispatch(DoEditTodoAction((action) => action
              ..note = note
              ..id = id)),
            distinct: true,
            builder: (context, editTodo) => ListTile(
              key: Key("edit"),
              onTap: () {
                showDialog(context: context, builder: (context) => TodoDialog(note: _todo.note)).then((value) {
                  if (value != null) {
                    editTodo(_todo.id, value);
                  }
                  Navigator.pop(context);
...
            ),
          ),
          StoreConnector<AppState, Function(int id)>(
            converter: (store) => (id) => store.dispatch(DoDeleteTodoAction((action) => action..id = id)),
            distinct: true,
            builder: (context, deleteTodo) => ListTile(
              key: Key("delete"),
              onTap: () {
                showDialog(
                        context: context,
                        builder: (context) => ConfirmDialog("Are you sure?", "Do you want to delete this todo?"))
                    .then((value) {
                  if (value == true) {
...
